--- a/index.html
+++ b/index.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lentele</title>
+    <style type="text/css">
+        body {
+            background-color: #ccc;
+            padding: 10%;
+            margin-left: 30%;
+        }
+        table, tr, th, td {
+            border: 4px solid rgb(15, 140, 168);
+            border-collapse: collapse;
+            text-align: center;
+            padding: 5px 10px;
+            background-color: azure;
+            color: rgba(17, 87, 78, 0.79);
+        }
+    </style>
 </head>
 <body>
-    CONTENT DEMO 2
+    <table>
+        <tr>
+                <th>Nr</th>
+                <th>Vardas</th>
+                <th>Įvertinimas</th>
+        </tr>       
+            <tr>
+                <td>1</td>
+                <td>Jonas</td>
+                <td>10</td>
+            </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Vaiva</td>
+                    <td>8</td>
+                </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Ona</td>
+                        <td>9</td>
+                    </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Linas</td>
+                            <td>6</td>
+                        </tr>
+        
+    </table>
 </body>
 </html>
